fix(project) better contrast ratio

--- a/site/web/app/themes/smart-city/resources/assets/styles/components/_project-box.scss
+++ b/site/web/app/themes/smart-city/resources/assets/styles/components/_project-box.scss
@@ -32,7 +32,7 @@
   height: 100%;
   top: 0;
   left: 0;
-  opacity: 0.8;
+  opacity: 0.7;
 }
 
 .project-box .body .body-overlay {
