--- a/site/web/app/themes/smart-city/resources/assets/styles/layouts/_proiect.scss
+++ b/site/web/app/themes/smart-city/resources/assets/styles/layouts/_proiect.scss
@@ -20,7 +20,7 @@ article.type-proiect .header-image::before {
   top: 0;
   left: 0;
   width: 100%;
-  opacity: 0.85;
+  opacity: 0.5;
 }
 
 article.type-proiect .intro .metadata {
